--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -1,8 +1,40 @@
+/* public/css/styles.css */
+
+#sidebar {
+    width: 250px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: -250px;
+    background-color: #333;
+    padding-top: 20px;
+    color: white;
+    transition: all 0.3s;
+}
+
+#content {
+    margin-left: 0;
+    transition: margin-left 0.3s;
+}
+
+#sidebar.active {
+    left: 0;
+}
+
+#content.active {
+    margin-left: 250px;
+}
+
+
+
+/*
 #wrapper {
     margin: auto;
     width: 750px;
     border: 1px solid red;
 }
+*/
+/*
 #header{
     height: 58px;;
 
@@ -61,6 +93,7 @@
     border: 1px solid #888;
     width: 30%;
 }
+*/
 
 /**/
 #tutup {
